Fix UI: use React Portals to break modals out of layout stacking context to fix overlap with fixed navigation bar

--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@
   }
 
   .dashboard-main {
-    @apply fixed top-24 left-0 right-0 bottom-0 z-10 overflow-hidden;
+    @apply fixed top-24 left-0 right-0 bottom-0 overflow-hidden;
   }
 
   .dashboard-main-inner {
